--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@ layout: default
 <!-- Information -->
 <div class="jumbotron information">
 
+  <p>In the last decade, substantial progress has been made w.r.t. the performance of computer vision systems, a significant part of it thanks to deep learning. These advancements prompted sharp community growth and a rise in industrial investment. However, most current models lack the ability to reason about the confidence of their predictions; integrating uncertainty quantification into vision systems will help recognize failure scenarios and enable robust applications.</p>
 
-<p>In the last decade, substantial progress has been made w.r.t. the performance of computer vision systems, a significant part of it thanks to deep learning. These advancements prompted sharp community growth and a rise in industrial investment. However, most current models lack the ability to reason about the confidence of their predictions; integrating uncertainty quantification into vision systems will help recognize failure scenarios and enable robust applications.</p>
-
-<p>In addition to advances in Bayesian deep learning, providing practical approaches for vision problems, the workshop will provide a forum for discussing promising research directions, which have received less attention, as well as advancing current practices to drive future research. Examples include: the development of new metrics that reflect the real-world need for uncertainty when using vision systems with down-stream tasks; and moving beyond point-estimates to address the multi-modal ambiguities inherent in many vision tasks.</p>
-
-<p>
-This years UNcertainty quantification for Computer Vision (UNCV) Workshop aims to raise awareness and generate discussion regarding how predictive uncertainty can, and should, be effectively incorporated into models within the vision community. The workshop will bring together experts from machine learning and computer vision to create a new generation of well-calibrated and effective methods that <i>know when they do not know</i>. 
-</p>
+  <p>The UNcertainty quantification for Computer Vision (UNCV) Workshop aims to raise awareness and generate discussion regarding how predictive uncertainty can, and should, be effectively incorporated into models within the vision community. At the time of Generative AI (GenAI) we find this more crucial than ever. The workshop will bring together experts from machine learning and computer vision to create a new generation of well-calibrated and effective methods that <i>know when they do not know</i>. </p>
 </div>
 
 
@@ -50,7 +45,24 @@ The workshop will happen in person at CVPR 2025!
 </br>
 
 <h2>Call for Papers</h2>
-The call for papers will be announced shortly.
+  <p>
+  We invite submissions on topics, such as, but not limited to:
+  <ul>
+    <li> Applications of uncertainty quantification in computer vision </li>
+    <li> Reliability of Multi-modal Models (e.g., Vision-Language) </li>
+    <li> Uncertainty Quantification of Open-Vocabulary approaches </li>
+    <li> Failure prediction (e.g., Out-of-Distribution detection) </li>
+    <li> Robustness in computer vision </li>
+    <li> Safety critical applications (e.g., autonomous driving) </li>
+    <li> Domain-shift in computer vision </li>
+    <li> Deep probabilistic models </li>
+    <li> Methods for uncertainty quantification </li>
+    <li> Incorporating explicit prior knowledge in deep learning </li>
+    <li> Output ambiguity, label noise, and diversity </li>
+    <li> Uncertainty Quantification of GenAI approaches </li>
+  </ul>
+  </p>
+  Further details will be announced shortly.
 </br>
 
 <h2>Important Dates</h2>
