--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@ The workshop will happen in person at CVPR 2025!
     <li> Uncertainty Quantification of GenAI approaches </li>
   </ul>
   </p>
-  Further details will be announced shortly.
+
+  <p>We invite two types of submissions: <b>regular papers</b> (that will follow CVPR format, published in proceedings) and <b>extended abstracts</b> (short max 4 pages papers, not published in proceedings).</p>
+
+  <p>All submissions will be peer-reviewed, and accepted submissions will be presented at the workshop. <b>Only regular CVPR workshop papers (14 pages)</b> will be included in the Workshop Proceedings. All submission should follow the <a href="https://cvpr.thecvf.com/Conferences/2025/AuthorGuidelines">CVPR author guidelines</a> using the provided <a href="https://github.com/cvpr-org/author-kit/releases">author kit.</a></p>
+  <br/>
+  <br/>
+  <b>Submission link:</b> <a href="https://openreview.net/group?id=thecvf.com/CVPR/2025/Workshop/UnCV">OpenReview</a> 
 </br>
 
 <h2>Important Dates</h2>
