--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
 </div>
 
 <h2>Workshop Program</h2>
-The workshop will happen in person at CVPR 2025!
+The workshop will happen in person at CVPR 2025 on Wednesday June 11.
 </br>
 
 <h2>Call for Papers</h2>
