--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@ layout: default
 
 <!-- Content -->
 
+
+
+<h3>🔥 Show your work at our poster session!</h3>
+
+Are you interested in presenting your recent work in our poster session?
+Nominate yourself <b>before May 27th</b> by filling out this <a href="https://forms.gle/3KXtqBcmKaS16JVb9">google form</a>!
+
+
 <h2>Speakers</h2>
 
 <div class="row justify-content-center people-widget text-center">
